Fully implement short info page, fix alignments in stylesheet

--- a/static/style.css
+++ b/static/style.css
@@ -1,26 +1,38 @@
 a,
 p,
 th,
+td,
 table {
     font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
+    margin:0px;
+}
+
+a,
+p {
+    padding: 0px;
 }
 
 table {
     border-collapse: collapse;
+    margin:0px;
 }
 
 td,
 th {
-    border: 1px solid #bbb;
-    padding: 10px 15px;
+    padding: 15px 15px;
 }
 
-tr:nth-child(even) {
+#content td, 
+#content th{
+    border: 1px solid #bbb;
+}
+
+#content tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-tr:hover {
+#content tr:hover {
     background-color: #ddd;
 }
 
@@ -30,18 +42,18 @@ th {
     color: white;
 }
 
-td  {
-    padding-top: 0px;
-    padding-bottom: 0px;
-}
-
-#info{
+#info {
     text-align: center;
     vertical-align: middle;
+    padding: 0px;
+}
+
+#info a{
+    margin: 0px;
+    padding: 0px;
 }
 
 #info img {
-    padding: 5px;
     width: 40px;
 }
 
@@ -59,4 +71,26 @@ td  {
 
 #content{
     padding:20px;
+}
+
+#content-grid {
+    padding: 20px 0px;
+    display: inline-grid;
+    width: 100%;
+    grid-template-columns: 75% 25%;
+}
+
+#instituteImg a{
+    position: relative;
+    float: right;
+    width: 100%;
+    height: 100%;
+}
+
+#instituteImg a img{
+    width: 100%;
+}
+
+#content-grid table {
+    display: inline-grid;
 }
